🧹 Split client or server files 🧹

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 # Ignore audio files
-music/*.mp3
-music/*.wav
-music/*.aac
-music/*.flac
-music/*.m4a
-music/*.ogg
-music/*.wma
+*.wav
+*.aac
+*.flac
+*.m4a
+*.ogg
+*.wma
 *.mp3
 
 # MacOs
