--- a/client-side/makefile
+++ b/client-side/makefile
@@ -37,8 +37,9 @@ compiler:
 
 test: compiler
 	$(PRINT) "$(COLOR)[32m--------| $(COLOR)[1;32mTest of the binary file$(COLOR)[0m$(COLOR)[32m |--------$(COLOR)[0m\n\n"
-	-rm music/*.mp3
-	./client Halcyon.mp3 "FileUploader:default -p 10000"
+	-rm music/*.
+	$(PRINT) "\n\n"
+	./client Goldilocks_Enigma.mp3 "FileUploader:default -p 10000"
 	$(PRINT) "\t$(COLOR)[1;32mDONE$(COLOR)[0m\n"
 
 .PHONY: all clean test
